--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,144 @@
-# LangChain Core
-langchain
-langchain-core
-
-# OpenAI Integration
-langchain-openai
-openai
-
-# Anthropic Integration
-langchain-anthropic
-
-# Google Gemini (PaLM) Integration
-langchain-google-genai
-google-generativeai
-
-# Hugging Face Integration
-langchain-huggingface
-transformers
-huggingface-hub
-
-# Environment Variable Management
-python-dotenv
-
-# Machine Learning Utilities
-numpy
-scikit-learn
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
+annotated-types==0.7.0
+anthropic==0.64.0
+anyio==4.9.0
+appnope==0.1.4
+asttokens==3.0.0
+async-timeout==4.0.3
+attrs==25.3.0
+beautifulsoup4==4.13.4
+bs4==0.0.2
+cachetools==5.5.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
+comm==0.2.2
+dataclasses-json==0.6.7
+debugpy==1.8.14
+decorator==5.2.1
+distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
+Events==0.5
+exceptiongroup==1.3.0
+executing==2.2.0
+faiss-cpu==1.12.0
+filelock==3.18.0
+filetype==1.2.0
+frozenlist==1.7.0
+fsspec==2025.7.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.178.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grandalf==0.8
+grpcio==1.74.0
+grpcio-status==1.71.2
+h11==0.16.0
+hf-xet==1.1.7
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.34.4
+idna==3.10
+importlib_metadata==8.7.0
+ipykernel==6.29.5
+ipython==8.18.1
+ipywidgets==8.1.7
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_widgets==3.0.15
+langchain==0.3.26
+langchain-anthropic==0.3.18
+langchain-community==0.3.27
+langchain-core==0.3.74
+langchain-experimental==0.3.4
+langchain-google-genai==2.0.10
+langchain-huggingface==0.3.1
+langchain-openai==0.3.30
+langchain-text-splitters==0.3.8
+langsmith==0.4.4
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+numpy==2.0.2
+openai==1.99.9
+opensearch-py==3.0.0
+orjson==3.10.18
+packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
+pykernel==0.1.6
+pyparsing==3.2.3
+pypdf==5.7.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+pyzmq==27.0.0
+regex==2025.7.34
+requests==2.32.4
+requests-toolbelt==1.0.0
+rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.6.1
+scipy==1.13.1
+sentence-transformers==5.1.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+stack-data==0.6.3
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.11.0
+tokenizers==0.21.4
+torch==2.8.0
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.55.2
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uritemplate==4.2.0
+urllib3==1.26.20
+wcwidth==0.2.13
+widgetsnbextension==4.0.14
+wikipedia==1.4.0
+yarl==1.20.1
+yt-dlp==2025.6.30
+zipp==3.23.0
+zstandard==0.23.0
